--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(/src/image/bg-image.jpeg);
+    background: url(../image/bg-image.jpeg);
     background-size: cover;
 }
 .box {
