--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,93 +1,179 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url('../image/bg-image.jpeg');
-    background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url("../image/bg-image.jpeg");
+  background-size: cover;
 }
 .box {
-    position: relative;
-    width: 200px;
-    height: 300px;
-    transform-style: preserve-3d;
-    animation: animate 80s linear infinite;
+  position: relative;
+  width: 200px;
+  height: 300px;
+  transform-style: preserve-3d;
+  animation: animate 80s linear infinite;
 }
 @keyframes animate {
-    0% {
-        transform: perspective(1000px) rotateY(0deg);
-    }
-    100% {
-        transform: perspective(1000px) rotateY(360deg);
-    }
+  0% {
+    transform: perspective(1000px) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(1000px) rotateY(360deg);
+  }
 }
 .box span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform-origin: center;
-    transform-style: preserve-3d;
-    transform: rotateY(calc(var(--i)* 36deg)) translateZ(400px);
-    -webkit-box-reflect: below 0px linear-gradient(transparent, transparent, #0004);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-origin: center;
+  transform-style: preserve-3d;
+  transform: rotateY(calc(var(--i) * 36deg)) translateZ(400px);
+  -webkit-box-reflect: below 0px
+    linear-gradient(transparent, transparent, #0004);
 }
 .box span img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
 header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 9999;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 9999;
 }
 
 .music-box {
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 90px;
-    max-width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 90px;
+  max-width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .music-info {
-    text-align: center;
-    flex-grow: 1;
+  text-align: center;
+  flex-grow: 1;
 }
 
 .song-name,
 .composer {
-    display: block;
-    margin: 5px 0;
-    font-size: 18px;
-    font-weight: bold;
-    color: #ffffff;
+  display: block;
+  margin: 5px 0;
+  font-size: 18px;
+  font-weight: bold;
+  color: #ffffff;
 }
 
 #myAudio {
-    width: calc(100% - 240px);
-    max-width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: none;
-    color: #ffffff;
+  width: calc(100% - 240px);
+  max-width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: none;
+  color: #ffffff;
 }
 
 .song-name a,
 .composer a {
-    text-decoration: none;
-    color: #ffffff;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+@media (max-width: 768px) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
+    max-width: 100vw;
+    flex-direction: column;
+    background-position: top center;
+    background-size: cover;
+    /*    background-position: +50% 0;
+*/
+    background-repeat: no-repeat;
+    padding: 0;
+  }
+
+  .box {
+    position: relative;
+    width: 200px;
+    height: 300px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .song-name,
+  .composer {
+    font-size: 16px;
+  }
+
+  #myAudio {
+    width: calc(100% - 160px);
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
+    max-width: 100vw;
+    flex-direction: column;
+    background-position: top center;
+    background-size: cover;
+    /*    background-position: +50% 0;
+*/
+    background-repeat: no-repeat;
+    padding: 0;
+  }
+
+  .box {
+    position: relative;
+    width: 200px;
+    height: 300px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .music-box {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .music-info {
+    text-align: center;
+    flex-grow: 1;
+    align-items: center;
+    text-align: left;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .song-name,
+  .composer {
+    font-size: 14px;
+  }
+
+  #myAudio {
+    width: 100%;
+  }
 }
